testdata/baselines/reference/submodule/conformance/jsDeclarationsExportSubAssignments.errors.txt
cls.js(7,16): error TS2339: Property 'Strings' does not exist on type 'typeof Foo'.


==== cls.js (1 errors) ====
    const Strings = {
        a: "A",
        b: "B"
    };
    class Foo {}
    module.exports = Foo;
    module.exports.Strings = Strings;
                   ~~~~~~~
!!! error TS2339: Property 'Strings' does not exist on type 'typeof Foo'.